multiple values field behaviour fixed - get_db_prep_value now works correctly

--- a/sakkada/admin/ajax_list/readme
+++ b/sakkada/admin/ajax_list/readme
@@ -16,7 +16,7 @@ Usage:
 Example usage:
 -------------
 from django.contrib import admin
-from sakkada.admin.ajax_list import AjaxListAdmin
+from sakkada.admin.ajax_list import AjaxListAdmin, ajax_list_field
 
 
 class SomeAjaxListAdmin(AjaxListAdmin, admin.ModelAdmin):
