--- a/sakkada/models/prev_next/readme
+++ b/sakkada/models/prev_next/readme
@@ -3,25 +3,31 @@ Allow to use specified queryset or custom ordering, else use default ordering.
 Mixin work by adding ordering by pk for uniqueness, if it not exist,
 and specific filtering by ordered fields.
 
+Note: Mixin works only if all order_by fields defined as string values (no any
+      expressions) and are local fields (no __ inside ordering field name) and
+      no contains randomizer ('?' value).
+ToDo: Realize expressions processing, at least local fields and direct forward
+      relations, etc.
+
 Functionality added:
 -------------------
  *  "_get_current_ordering" method,
     params: queryset instance
     return ordering for specified queryset
- *  "_get_next_or_previous_by_order" method,
-    params: order_by=None, queryset=None, cachename=None,
+ *  "_get_next_or_prev_by_order" method,
+    params: order_by=None, queryset=None, cache_name=None,
             is_next=True, force=False, as_queryset=False
     - custom "order_by" and "queryset" can be passed via params
-    - "cachename" changes internal cachename param, require when used twice
+    - "cache_name" changes internal cache_name param, require when used twice
         (or more) with different queryset or/and ordering,
     - caching will be disabled if as_queryset=True or force="nocache",
-    - if force is True, update current "cachename".
+    - if force is True, update current "cache_name".
     return next object if "is_next" else prev object,
         if "as_queryset" - return tuple(queryset, filter, ordering)
  *  "get_next_by_order" method,
-    alias to _get_next_or_previous_by_order(is_next=True, **kwargs)
+    alias to _get_next_or_prev_by_order(is_next=True, **kwargs)
  *  "get_prev_by_order" method,
-    alias to _get_next_or_previous_by_order(is_next=False, **kwargs)
+    alias to _get_next_or_prev_by_order(is_next=False, **kwargs)
 
 Installation:
 ------------
@@ -55,10 +61,10 @@ next = object.get_next_by_order()
 # get prev on current ordering and filtering (current queryset)
 prev = object.get_prev_by_order(queryset=queryset)
 
-# get prev on custom ordering (cachename must be set to avoid cache names
+# get prev on custom ordering (cache_name must be set to avoid cache names
 #   clashing, or force must be in (True, 'nocache') to disable cache at all)
 prev = object.get_prev_by_order(order_by=some_other_order_by,
-                                cachename='some_name')
+                                cache_name='some_name')
 
 # get prev on custom queryset and return queryset
 qs = SomeModel.objects.filter(some_other_filter).order_by(*some_other_order_by)
@@ -70,8 +76,8 @@ prev = object.get_prev_by_order(force=True)
 # get next on default ordering and filtering, no cache
 next = object.get_next_by_order(force='nocache')
 
-# get next on default ordering and filtering, alternative cachename
-next = object.get_next_by_order(cachename='some_other_name')
+# get next on default ordering and filtering, alternative cache_name
+next = object.get_next_by_order(cache_name='some_other_name')
 
 template code:
 -------------------------------------------------------------------------------
@@ -119,4 +125,3 @@ next:   (("weight" IS NULL AND "id" > 7) OR
          ("weight" IS NOT NULL)) AND NOT ("id" = 7)
 
 prev:   (("weight" IS NULL AND "id" < 7)) AND NOT ("id" = 7))
-
